# agent_reliability_lab

./: .gitignore  BUILDSTEPS.md  README.md  docker-compose.yml  eval_report.json  phase_0-2_LI_post.txt  phase_0-2_writeup.md  pyproject.toml
src/agent/: __init__.py  guardrails.py  workflow.py
src/app/: __init__.py  api.py  models.py
src/data/dags/: customer_activity_dag.json
src/data/runbooks/: airflow_timeouts.md  data_delay.md
src/db/: models.py  persist.py  schema.sql  session.py
src/evals/: models.py  runner.py  scoring.py
src/tests/eval_cases/: eval_001_timeout_high.json  eval_002_timeout_critical.json  eval_003_no_keywords.json  eval_004_permission_error.json  eval_005_low_severity_baseline.json  eval_006_unknown_run_id.json  eval_007_multiple_keywords.json  eval_008_critical_with_context.json  eval_009_permission_critical.json  eval_010_minimal_incident.json  eval_011_demo_failure.json
src/tests/eval_harness/: conftest.py  test_eval_cases.py
src/tests/integration/: test_api_server.py
src/tests/unit/: test_agent_workflow.py  test_guardrails.py
src/tools/: __init__.py  deterministic.py
